--- a/mobile/src/main/res/layout/content_l_time.xml
+++ b/mobile/src/main/res/layout/content_l_time.xml
@@ -46,8 +46,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardShadowEndColor="#01000000"
                 app:cardShadowStartColor="#20000000"
@@ -61,7 +61,7 @@
                         android:id="@+id/tv_shijian"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="?ty_bg"
+                        android:background="?cell_bg"
                         android:gravity="center"
                         android:text="09:99"
                         android:textColor="?l_text2"
