--- a/mobile/src/main/res/layout/content_l_taiya.xml
+++ b/mobile/src/main/res/layout/content_l_taiya.xml
@@ -69,8 +69,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     app:cardBackgroundColor="@android:color/transparent"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
                     app:cardPreventCornerOverlap="false"
                     app:cardShadowEndColor="#01000000"
                     app:cardShadowStartColor="#20000000"
@@ -84,7 +84,7 @@
                             android:id="@+id/tv_lt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?ty_bg"
+                            android:background="?cell_bg"
                             android:gravity="center_vertical|left"
                             android:padding="12dp"
                             android:text="左前\n0.0\n0.0"
@@ -99,8 +99,8 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     app:cardBackgroundColor="@android:color/transparent"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
                     app:cardPreventCornerOverlap="false"
                     app:cardShadowEndColor="#01000000"
                     app:cardShadowStartColor="#20000000"
@@ -115,7 +115,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="?ty_bg"
+                            android:background="?cell_bg"
                             android:gravity="center_vertical|right"
                             android:padding="12dp"
                             android:text="右前\n0.0\n0.0"
@@ -131,8 +131,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
                     app:cardBackgroundColor="@android:color/transparent"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
                     app:cardPreventCornerOverlap="false"
                     app:cardShadowEndColor="#01000000"
                     app:cardShadowStartColor="#20000000"
@@ -147,7 +147,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="?ty_bg"
+                            android:background="?cell_bg"
                             android:gravity="center_vertical|left"
                             android:padding="12dp"
                             android:text="左后\n0.0\n0.0"
@@ -162,8 +162,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
                     app:cardBackgroundColor="@android:color/transparent"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
                     app:cardPreventCornerOverlap="false"
                     app:cardShadowEndColor="#01000000"
                     app:cardShadowStartColor="#20000000"
@@ -177,7 +177,7 @@
                             android:id="@+id/tv_rb"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?ty_bg"
+                            android:background="?cell_bg"
                             android:gravity="center_vertical|right"
                             android:padding="12dp"
                             android:text="右后\n0.0\n0.0"
