--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -39,4 +39,10 @@
     <color name="color_dark">#263238</color>
     <color name="color_dark_light">#455A64</color>
     <color name="color_light">#ECEFF1</color>
+
+    <color name="l_text1">#333e54</color>
+    <color name="l_text1_b">#fff</color>
+
+    <color name="l_text2">#697185</color>
+    <color name="l_text2_b">#fff</color>
 </resources>
