--- a/mobile/src/main/res/layout/content_l_prompt.xml
+++ b/mobile/src/main/res/layout/content_l_prompt.xml
@@ -2,9 +2,9 @@
 <com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl_base"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?prompt_bg">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_time"
